Clean up Error Prone configuration (#4742)
After setting the baseline for Dropwizard to Java 11, we can simplify the Error Prone configuration which had to account running on Java 8, 11, and 17 before.